# ChangeLog for media-libs/libipoddevice
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libipoddevice/Attic/ChangeLog,v 1.10 2006/11/19 20:26:29 cardoe Exp $

  19 Nov 2006; Doug Goldstein <cardoe@gentoo.org>
  libipoddevice-0.4.5.ebuild, libipoddevice-0.5.0.ebuild,
  libipoddevice-0.5.0-r1.ebuild, libipoddevice-0.5.1.ebuild:
  Fixing dbus depends

  29 Oct 2006; Doug Goldstein <cardoe@gentoo.org>
  libipoddevice-0.4.5.ebuild, libipoddevice-0.5.0.ebuild,
  libipoddevice-0.5.0-r1.ebuild, libipoddevice-0.5.1.ebuild:
  Updating dbus depends to depend on specific bindings needed

*libipoddevice-0.5.1 (17 Oct 2006)

  17 Oct 2006; Luis Medinas <metalgod@gentoo.org>
  +libipoddevice-0.5.1.ebuild:
  Version Bump.

*libipoddevice-0.5.0-r1 (08 Oct 2006)

  08 Oct 2006; Luis Medinas <metalgod@gentoo.org>
  +files/libipoddevice-0.5.0-gentoohal.patch,
  +libipoddevice-0.5.0-r1.ebuild:
  Fix libipoddevice against our hal fixes bug #148605.

*libipoddevice-0.5.0 (19 Sep 2006)

  19 Sep 2006; Luis Medinas <metalgod@gentoo.org>
  +libipoddevice-0.5.0.ebuild:
  Version Bump.

*libipoddevice-0.4.5 (22 Apr 2006)

  22 Apr 2006; Luis Medinas <metalgod@gentoo.org>
  +libipoddevice-0.4.5.ebuild:
  Version Bump.

  08 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  libipoddevice-0.4.1.ebuild:
  Added to ~ppc, bug #115865

*libipoddevice-0.4.1 (13 Feb 2006)

  13 Feb 2006; Luis Medinas <metalgod@gentoo.org>
  +libipoddevice-0.4.1.ebuild:
  Version Bump.

  07 Dec 2005; Herbie Hopkins <herbs@gentoo.org> libipoddevice-0.4.0.ebuild:
  Fix libdir in pkgconfig file on multilib systems.

*libipoddevice-0.4.0 (27 Nov 2005)

  27 Nov 2005; Luis Medinas <metalgod@gentoo.org>
  +libipoddevice-0.4.0.ebuild:
  New Package. This is a library needed to build Banshee. Thanks to all users
  involved in bug #91419.
