@@ -8,6 +8,7 @@ SHA256 374847a8dae2ee7922cd57d01bcc7d6366394f408eb60b73c782352cf955bf7e files/li
 DIST libipoddevice-0.4.5.tar.gz 343309 RMD160 547752ca3559caea3497378eeb25f8787120c592 SHA1 0c23cf26acedf819437052d18e1aa29596df64b1 SHA256 08765a01a2170f6550aa455b8c3a080da69d68ce5e8ba439ddd43503a5347ad3
 DIST libipoddevice-0.5.0.tar.gz 351535 RMD160 814ba67a5ab8a97653466e27d89d715c6d395acc SHA1 98bb245bf73ec3e23c5ed95c244b1475a9085356 SHA256 4da39bccfe605c5ca35abf606603395eedae83feab159184ad4f5efc2acac12d
 DIST libipoddevice-0.5.1.tar.gz 351928 RMD160 2e17ea340e49242ea9aaf0ba426b3bf6c8aff0ea SHA1 6b99812ba7af107dbaeb7257c57fe1568de5a530 SHA256 235f7b8dace1066e3555805afa758f904fadb11bc227b37667cf5b7686e17c5d
+DIST libipoddevice-0.5.2.tar.gz 352255 RMD160 125250e1a03de9a33bc324fb68c6d249e053a68c SHA1 01d1b11687040fe172fc6f1a6cabd50fd9f30401 SHA256 c3a4673fa88fce482402803dfa115870744172093de66b465c1c4bce8132bb0e
 EBUILD libipoddevice-0.4.5.ebuild 1308 RMD160 0611d6850a5598b6045e0d1d65d39ba52c76baa0 SHA1 18dd3b556e95eed2b8a0d783fd9f1f53e3207e70 SHA256 b33ee135e1dde6f7ff8f9dcf4b3b39a03a9b935bc6ce1995d76997471de0c787
 MD5 d3a6a60c11a7606f5d26ea88b4e99fc8 libipoddevice-0.4.5.ebuild 1308
 RMD160 0611d6850a5598b6045e0d1d65d39ba52c76baa0 libipoddevice-0.4.5.ebuild 1308
@@ -24,10 +25,14 @@ EBUILD libipoddevice-0.5.1.ebuild 1335 RMD160 88c7adc8d12a513b3e26abc7881e2de069
 MD5 35739053219f40d7cda5c5fc5ebc79ee libipoddevice-0.5.1.ebuild 1335
 RMD160 88c7adc8d12a513b3e26abc7881e2de0697a0073 libipoddevice-0.5.1.ebuild 1335
 SHA256 d06ad0d6466f81cbf6e3d11d4de779f26f97ac4c8eb1f2883c7023f521c732ae libipoddevice-0.5.1.ebuild 1335
-MISC ChangeLog 1875 RMD160 89373d757d714b7d282c0d24d38380251c329479 SHA1 382f550717f9e5b8d13974d3181c310ae6ec6dde SHA256 30790fdcc61bf618dc8342f3a0209abe7bc9987e55fedce5944ae006c816b9ef
-MD5 f520f44e0777b2536805f8c13ee23f3f ChangeLog 1875
-RMD160 89373d757d714b7d282c0d24d38380251c329479 ChangeLog 1875
-SHA256 30790fdcc61bf618dc8342f3a0209abe7bc9987e55fedce5944ae006c816b9ef ChangeLog 1875
+EBUILD libipoddevice-0.5.2.ebuild 1337 RMD160 4adfc4d05c9cb4afac5a20fbf3d31e952f7c6256 SHA1 08355ab1ab5747af9e16940a218a1109df26225f SHA256 5a948a805c5371355e564df35053d06ab578503c0f972065739ace1ae4679d6a
+MD5 0e3d5adf0f9f1aeacdd23d549d630f30 libipoddevice-0.5.2.ebuild 1337
+RMD160 4adfc4d05c9cb4afac5a20fbf3d31e952f7c6256 libipoddevice-0.5.2.ebuild 1337
+SHA256 5a948a805c5371355e564df35053d06ab578503c0f972065739ace1ae4679d6a libipoddevice-0.5.2.ebuild 1337
+MISC ChangeLog 2011 RMD160 e3b7dd2ab3ec4eb08abfe6db81bb3c05de9d595f SHA1 206dc355ab53eef8ecd6340ac302c7a3f4cf4436 SHA256 057730d2ba6c14460a1194ecb0b6a4cab442e595c7ff54c85052088dc3a7c3d7
+MD5 156b02599210bd33d3735fbe333d8e10 ChangeLog 2011
+RMD160 e3b7dd2ab3ec4eb08abfe6db81bb3c05de9d595f ChangeLog 2011
+SHA256 057730d2ba6c14460a1194ecb0b6a4cab442e595c7ff54c85052088dc3a7c3d7 ChangeLog 2011
 MISC metadata.xml 294 RMD160 a0ecd559d8ebff0b2e91aac31e12dd1fb9074c7e SHA1 a82bcefd597a8ca762a169dd8b2895d1347dcdfb SHA256 50e382a1cdc9b8d5bd7a6e62bae3e8b57cf36e157f70d0136b57d50edf2e8041
 MD5 46261388ca1ae057f1d8590a23834c49 metadata.xml 294
 RMD160 a0ecd559d8ebff0b2e91aac31e12dd1fb9074c7e metadata.xml 294
@@ -44,10 +49,13 @@ SHA256 a5383e60c7a834b9041e4fc60d6987259a15cac87e9a89343158253640e3ec2c files/di
 MD5 81541ee78c42aee947b6137b44d5a53c files/digest-libipoddevice-0.5.1 259
 RMD160 a1c3b5b7fb772cfddbab4fd64a6acd813012c216 files/digest-libipoddevice-0.5.1 259
 SHA256 d9fe6a75917fcdd1e638cff116ca96c2e62b18eeaa4d367e07e7b415b9da5944 files/digest-libipoddevice-0.5.1 259
+MD5 8087e337f3e57048fd26e1bb4eda33b1 files/digest-libipoddevice-0.5.2 259
+RMD160 0fbb419679245fda2289d8793cadb89a40814b06 files/digest-libipoddevice-0.5.2 259
+SHA256 8fb399946cbedcc124fe03ba8f5f4478d4fef81fa204cb57dc557ba289436bab files/digest-libipoddevice-0.5.2 259
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.5 (GNU/Linux)
+Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFFYL4PoeSe8B0zEfwRAiioAJ4knCdxA7KAD8zXBcQRz83tSqUDlwCeNV8R
-+vFtZFD0V5WxXZYzu6KKfCc=
-=Y+yS
+iD8DBQFFezhGwUpWvClEHQoRAuUkAJ4yfvIMSZl+UnAND5IhQYJptRw31QCfTH38
+klzEPixc4/0rqp5VacJXL9s=
+=DUEe
 -----END PGP SIGNATURE-----
