@@ -1,0 +1,3 @@
+MD5 fded69359b9ed70bde73b9af980eca29 libipoddevice-0.5.2.tar.gz 352255
+RMD160 125250e1a03de9a33bc324fb68c6d249e053a68c libipoddevice-0.5.2.tar.gz 352255
+SHA256 c3a4673fa88fce482402803dfa115870744172093de66b465c1c4bce8132bb0e libipoddevice-0.5.2.tar.gz 352255
