@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libipoddevice
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libipoddevice/Attic/ChangeLog,v 1.10 2006/11/19 20:26:29 cardoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libipoddevice/Attic/ChangeLog,v 1.11 2006/12/09 22:26:58 metalgod Exp $
+
+*libipoddevice-0.5.2 (09 Dec 2006)
+
+  09 Dec 2006; Luis Medinas <metalgod@gentoo.org>
+  +libipoddevice-0.5.2.ebuild:
+  Version Bump.
 
   19 Nov 2006; Doug Goldstein <cardoe@gentoo.org>
   libipoddevice-0.4.5.ebuild, libipoddevice-0.5.0.ebuild,
